--- a/src/Styles/Components/_d3Chart.scss
+++ b/src/Styles/Components/_d3Chart.scss
@@ -5,7 +5,8 @@
   background-color: $plum;
   border-radius:10px;
   display: inline-block;
-  height: 300px;
+  height: 500px;
+  width: 900px;
   margin: 20px;
   // padding: 10px;
 }
