--- a/src/Styles/Components/_d3Chart.scss
+++ b/src/Styles/Components/_d3Chart.scss
@@ -6,7 +6,7 @@
   border-radius:10px;
   display: inline-block;
   height: 500px;
-  width: 900px;
+  width: 700px;
   margin: 20px;
   // padding: 10px;
 }
@@ -16,6 +16,29 @@
   stroke-width: 2px;
 }
 
+.d3-chart__svg__axis .tick line {
+  stroke: white;
+}
+
+.d3-chart__svg__axis .tick text {
+  transform: translateY(3px);
+  fill: white;
+  font-size: 1.5em;
+}
+
+.d3-chart__svg__axis .domain{
+  stroke: white;
+}
+
+.d3-chart__svg__axis .domain{
+  stroke: white;
+}
+
+
+
+
+
+// ugly -- use some cool scss later
 .d3-chart__svg__bar--red {
   fill: red;
 }
@@ -26,4 +49,16 @@
 
 .d3-chart__svg__bar--green {
   fill: green;
+}
+
+.d3-chart__svg__bar--yellow {
+  fill: #FFEB5B;
+}
+
+.d3-chart__svg__bar--black {
+  fill: black;
+}
+
+.d3-chart__svg__bar--white {
+  fill: white;
 }
