button labels correct

--- a/src/Styles/Components/_d3Chart.scss
+++ b/src/Styles/Components/_d3Chart.scss
@@ -1,4 +1,6 @@
 .d3-chart {
+  display: inline-block;
+  text-align: center;
 }
 
 .d3-chart__container {
@@ -6,9 +8,9 @@
   border-radius:10px;
   display: inline-block;
   height: 500px;
+  margin-top: 20px;
   width: 700px;
-  margin: 20px;
-  // padding: 10px;
+
 }
 
 .d3-chart__svg__bar {
@@ -34,8 +36,10 @@
   stroke: white;
 }
 
-
-
+.d3-chart__svg__axis-label {
+  fill: white;
+  font-size: 1.5em;
+}
 
 
 // ugly -- use some cool scss later
