--- a/src/Styles/Components/_bottomControls.scss
+++ b/src/Styles/Components/_bottomControls.scss
@@ -1,3 +1,15 @@
-.left-controls {
+.bottom-controls {
+  background-color: $peach;
+  border-radius: 10px;
   display: inline-block;
+  margin: 15px;
+  padding: 15px;
+}
+
+.bottom-controls__button {
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 5px;
+  display: inline;
+  margin: 2px;
 }
