--- a/src/Styles/Components/_leftControls.scss
+++ b/src/Styles/Components/_leftControls.scss
@@ -1,3 +1,15 @@
 .left-controls {
+  background-color: $peach;
+  border-radius: 10px;
   display: inline-block;
+  margin: 15px;
+  padding: 15px;
+  vertical-align: top;
+}
+
+.left-controls__button {
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 5px;
+  margin: 2px;
 }
